[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl-mlm"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.17.0",
    "flwr-datasets>=0.5.0",
    "torch==2.5.1",
    "transformers>=4.30.0,<5.0",
    "evaluate>=0.4.0,<1.0",
    "datasets>=2.0.0, <3.0",
    "scikit-learn>=1.6.1, <2.0",
    "peft>=0.15.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "jp9959"

[tool.flwr.app.components]
serverapp = "fl_mlm.server_app:app"
clientapp = "fl_mlm.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10
fraction-fit = 1.0
fraction-evaluate = 1.0
local-epochs = 10
model-name = "microsoft/BiomedNLP-BiomedBERT-base-uncased-abstract-fulltext"
initial-lr = 5e-5
chunk-size = 256
mlm-probability = 0.15
batch-size = 8
lora-rank = 16
lora-alpha = 32
lora-dropout = 0.1
test-dataset = 7

[tool.flwr.federations]
default = "localhost-gpu"

[tool.flwr.federations.localhost]
options.num-supernodes = 2

[tool.flwr.federations.localhost-gpu]
options.num-supernodes = 2
options.backend.client-resources.num-cpus = 1 # each ClientApp assumes to use 4CPUs
options.backend.client-resources.num-gpus = 0.25 # at most 4 ClientApps will run in a given GPU
